--- a/src/main/resources/templates/vecancies/index.html
+++ b/src/main/resources/templates/vecancies/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,23 +8,48 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="/css/vecancies/style.css">
 </head>
+
 <body>
     <div class="pop_up">
-        <h1>Opções de ocupação</h1>
-        <div class="diaria">
-            <div class="title">
-                <div>
-                    <img src="" alt="">
-                    <p>Diária</p>
+        <div class="content_popup">
+            <h1>Opções de ocupação</h1>
+            <div class="daily_and_our">
+                <div class="daily">
+                    <div class="title">
+                        <div>
+                            <p>&#10031;</p>
+                            <p>Diária</p>
+                        </div>
+                        <div id="price">
+                            <p>R$ 240</p>
+                            <p>R$ 140</p>
+                        </div>
+                    </div>
+                    <div class="text">
+                        <p>Direito a alocar o veiculo por 1 dia</p>
+                        <p>Você tem o dirieiro de sair e entrar quando quiser, sua vaga não será ocpadapor outra pessoa</p>
+                    </div>
+                    <div class="atention">
+                        <h1>Atenção</h1>
+                        <p>Caso passe de 24h, será cobrado o valor respectivo a 2 dias e assim por diante</p>
+                    </div>
+                    <button>Alugar</button>
                 </div>
-                <div>
-                    <p>R$ 240</p>
-                    <p>R$ 140</p>
-                </div>
+                <div class="our">
+                    <div>
+                        <p>Hora</p>
+                        <p>R$ 10</p>
+                    </div>
+                    <p>Direito a alocar o veiculo por 1 hora</p>
+                    <div class="atention">
+                        <h1>Atenção</h1>
+                        <p>Caso passe do horario reservado, será acrecsido 1 hora ao valor total e assim por diante.</p>
+                        <p>Caso você deixe o estabelecimento a sua vaga poderá ser alocada por outro veiculo.</p>
+                    </div>
+                    <button>Alugar</button>
             </div>
-            <div class="texto">
-                
-            </div>
+        </div>
+            
         </div>
     </div>
     <div style="display: none;">
@@ -96,7 +122,7 @@
             </div>
         </div>
     </div>
-    
+
 </body>
+
 </html>
-	
