--- a/src/main/resources/static/css/vacancies/style.css
+++ b/src/main/resources/static/css/vacancies/style.css
@@ -12,18 +12,21 @@ body {
     justify-content: center;
     
     height: 100vh;
-    padding-top: 70px;
-    background-color: #121212;
+    background: linear-gradient(45deg, #3A3A3A, #282828);
     color: #ffffff;
 }
 
 .pop_up {
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
     
     height: 100vh;
     width: 100%;
+    padding: 30px;
+    background-color: #0f0f0f4e;
+    z-index: 1;
+    position: absolute;
 }
 
 .content_popup {
@@ -33,19 +36,73 @@ body {
     padding: 60px;
     border-radius: 20px;
     background: linear-gradient(45deg, #3A3A3A, #282828);
-    width: 50%;
+    width: 40%;
+    min-width: 700px;
+    z-index: 2;
+    position: absolute;
+}
 
+@media (max-width: 800px) {
+    .content_popup {
+        min-width: 300px !important;
+        width: 90%;
+        padding: 50px 30px !important;
+    }
+    .daily_and_our  {
+        flex-direction: column;
+        gap: 50px;
+        padding-right: 25px;
+        overflow-y: auto;
+    }
+
+    .daily_and_our .daily, .our {
+        width: 100% !important;
+        align-items: flex-start !important;
+    }
+
+    .title {
+        width: 100%;
+    }
+
+    .title > div {
+        display: flex;
+        justify-content: flex-start !important;
+    }
+}
+
+@media (max-width: 600px) {
+     .content_popup {
+        width: 100%;
+     }   
+     
+     .content_popup h1 {
+        font-size: 23px !important;
+     }
+
+     .daily_and_our {
+        font-size: 20px !important;
+     }
 }
 
 .content_popup > h1 {
     margin-bottom: 30px;
 }
 
+@media (max-height: 780px) {
+    .daily_and_our{
+        max-height: 470px !important;
+    }
+}
 .daily_and_our {
     display: flex;
     justify-content: space-between;
-    font-size: 23px;
-    gap: 70px;
+    font-size: 22px;
+    max-height: 600px;
+}
+
+.daily_and_our .daily, .our {
+    width: 43%;
+    display: flex;
 }
 
 .content_popup h1 { 
@@ -60,13 +117,13 @@ body {
     align-items: center;
     justify-content: space-between;
     margin: 0 auto;
-    gap: 30px;
 }
 
 .daily .title {
     display:  flex;
     flex-direction: column;
     gap: 4px;
+    padding-bottom: 10px;
 }
 
 .daily .title div {
@@ -98,31 +155,69 @@ body {
 }
 
 .daily .atention h1 {
-    margin-bottom: 10px;
+    margin: 10px 0px 10px 0px;
 }
 
 
+
+
+.our .title {
+    display: flex;
+    flex-direction: column;
+    gap: 7px;
+    font-weight: bold;
+    padding-bottom: 10px;
+}
+
+.our .atention h1 {
+    margin: 10px 0px 10px 0px;
+}
+
+.our .title p:nth-child(1){
+    font-size: 24px;
+} 
+
+.our .atention div {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
 .content_popup button {
     background-color: #28A745;
-    border-radius: 5px;
+    border-radius: 7px;
     padding: 20px;
     width: 100%;
     font-weight: bold;
     color: white;
     font-size: 22px;
-    border: none;
+    border:2px solid #28A745;
     cursor: pointer;
-    transition: 0.3 all;
+    transition: 0.2s all;
+    margin-top: 30px;
 }
 
 .content_popup button:hover {
+    border:2px solid #28A745;
+    transform: scale(1.02);
+    background-color: white;
+    color: #28A745;
+    box-shadow: #28A745 3px 2px 11px 1px;
 }
 
+.content_popup button:active {
+    box-shadow: none;
+    transform: scale(1);
+}
+
+/* .vacancies {
+    z-index: -1;
+} */
 
 .header {
     width: 100%;
-    background-color: #e0aaaa;
-    padding: 25px;
+    background-color: #3E3E3E;
+    padding: 20px 30px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -130,7 +225,6 @@ body {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 1000;
 }
 
 .header .logo-container {
@@ -151,38 +245,70 @@ body {
 
 .header .user-info span {
     margin-left: 10px;
+    color:  #EFB810;
+    font-weight: bold;
+    font-size: 20px;
 }
 
-.header .logout a {
+.header a {
     text-decoration: none;
-    color: #ffffff;
+    color: #EFB810;
+    font-weight: bold;
+    font-size: 20px;
 }
 
 .container {
-    background: #1e1e1e;
-    padding: 20px;
+    background: #3E3E3E;
+    padding: 20px 50px;
     border-radius: 20px;
     box-shadow: 0 4px 10px rgba(255, 255, 255, 0.1);
     text-align: center;
+    border: #656565 2px solid;
+}
+
+@media(max-width: 940px) {
+.container {
+    background: red;
+    }
+    .container .title {
+        font-size: 40px !important;
+    }
+
+}
+
+@media(max-width: 700px) {
+    .container {
+        background: green;
+        }
+}
+
+
+
+.container .title {
+    display: flex;
+    font-size: 19px;
+    color: #EFB810;
+    width: 100%
 }
 
 .parking-grid {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
-    gap: 10px;
+    gap: 20px;
     margin-top: 20px;
     justify-content: center;
 }
 
 .spot {
-    width: 80px;
-    height: 30px;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
+    width: 100px;
+    height: 55px;
+    padding: 10px;
     color: white;
     font-weight: bold;
     border-radius: 5px;
+    font-size: 22px;
 }
 
 .occupied {
@@ -190,6 +316,7 @@ body {
 }
 
 .free {
+    cursor: pointer;
     background-color: #4caf50;
 }
 
@@ -197,6 +324,8 @@ body {
     display: flex;
     justify-content: center;
     margin-top: 10px;
+    font-weight: bold;
+    font-size: 20px;
 }
 
 .legend div {
