--- a/src/main/resources/templates/vacancies/index.html
+++ b/src/main/resources/templates/vacancies/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div onclick="showOccupation()" class="pop_up">
-        <div id="oi"></div>
         <div onclick="" class="content_popup">
+            <span id="close-popup" class="close-button">&times;</span>
             <h1>Opções de ocupação</h1>
             <div class="daily_and_our">
                 <div class="daily">
