--- a/src/main/resources/static/css/vacancies/style.css
+++ b/src/main/resources/static/css/vacancies/style.css
@@ -72,7 +72,7 @@ body {
 
 @media (max-width: 600px) {
      .content_popup {
-        width: 100%;
+        width: 90%;
      }   
      
      .content_popup h1 {
@@ -158,9 +158,6 @@ body {
     margin: 10px 0px 10px 0px;
 }
 
-
-
-
 .our .title {
     display: flex;
     flex-direction: column;
@@ -209,10 +206,6 @@ body {
     box-shadow: none;
     transform: scale(1);
 }
-
-/* .vacancies {
-    z-index: -1;
-} */
 
 .header {
     width: 100%;
@@ -267,43 +260,81 @@ body {
 }
 
 @media(max-width: 940px) {
-.container {
-    background: red;
-    }
-    .container .title {
-        font-size: 40px !important;
-    }
-
 }
 
 @media(max-width: 700px) {
-    .container {
-        background: green;
-        }
+
 }
 
-
+.vacancies{
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    padding-top: 40px;
+}
 
 .container .title {
     display: flex;
     font-size: 19px;
     color: #EFB810;
-    width: 100%
+    width: 100%;
 }
 
 .parking-grid {
     display: grid;
-    grid-template-columns: repeat(7, 1fr);
+    grid-template-columns: repeat(6, 1fr);
     gap: 20px;
     margin-top: 20px;
     justify-content: center;
+    overflow: hidden;
+    max-height: 500px;
+}
+
+@media (max-width: 945px) {
+    .parking-grid {
+        grid-template-columns: repeat(5, 1fr);
+    }
+}
+
+@media (max-width: 800px) {
+    .parking-grid {
+        grid-template-columns: repeat(4, 1fr);
+        overflow: auto;
+    }
+}
+
+@media (max-width: 665px) {
+    .parking-grid {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media (max-width: 530px) {
+    .parking-grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .vacancies {
+        align-items: flex-end;
+        padding: 0px 20px 50px 20px;
+    }
+}
+
+@media (max-height: 815px) {
+    .parking-grid {
+        max-height: 320px !important;
+    }
+
+    .container {
+        padding: 10px 40px;
+    }
 }
 
 .spot {
     display: flex;
     justify-content: flex-start;
-    width: 100px;
-    height: 55px;
+    width: 120px;
+    height: 60px;
     padding: 10px;
     color: white;
     font-weight: bold;
@@ -323,7 +354,7 @@ body {
 .legend {
     display: flex;
     justify-content: center;
-    margin-top: 10px;
+    margin-top: 20px;
     font-weight: bold;
     font-size: 20px;
 }
